2005-02-25  Francois Dumont  <dums@stlport...>

	* stlport/stl/_slist.h: Fix _M_splice_after method.

	* stlport/stl/debug/_slist.h: Add of many missing checks for the special
	slist before_begin iterator which returns true to the _Dereferenceable
	function call but is not dereferenceable in reality. Passing this
	iterator to method like erase or insert was invalid but was not detected
	by the _Dereferenceable function.

	* test/unit/slist_test.cpp: Add checks for insert, insert_after, splice
	splice_after methods.

	* Patch from Ulrich Eckhardt:
	- Fix macro _MSC_VER macro checks, VC6 should be found using _MSC_VER < 1300
	check rather than _MSC_VER == 1200 to take into account compilers like 
	EVC4 that is a VC6 based compiler with _MSC_VER == 1202.

2005-02-25  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_algobase.h: wrong parameters order in call to memchr,
	thanks Patrick Bergeron.

2005-02-24  Francois Dumont  <dums@stlport...>

	* stlport/stl/char_traits.h: Patch from Ulrich Eckhardt fixing a wrong
	_STLP_CALL specification on member operators and some cosmetic changes.

2005-02-22  Petr Ovtchenkov  <ptr@island...>

	* test/unit/limits_test.cpp: wchar_t is treated as signed, except when it
	equiv to unsigned short on Wins systems.

	* Repository: STLport 5.0 RC2

2005-02-20  Francois Dumont  <dums@stlport...>

	* Add many private definition of copy constructor and assignment operators
	to avoid very anoying warnings under some compilers (MSVC 7.0 7.1).

	* build/Makefiles/gmake/cygmin/sys.mak, test/unit/string_test.cpp:
	Mingw fixes thanks Shura Zam.

2005-02-19  Francois Dumont  <dums@stlport...>

	* stlport/stdexcept: Removal of a MSVC 7.0 and 7.1 workaround. Those compilers
	have a bug resulting in the generation of very long compiler message as
	soon as a simple compiler warning or error occur. Those messages are
	template instanciation context of previous disabled warning. Warning message